--- a/css/style.css
+++ b/css/style.css
@@ -171,6 +171,19 @@ h1{
                 background-position: center center;
                 background-size: cover;
             }
+            .histaff-avata-edu{
+                position: relative;
+                width: 120px;
+                height: 120px;
+                border-radius: 50%;
+                background: #efefef00;
+                text-align: center;
+                margin: 0 auto;
+                overflow: hidden;
+                border: 2px solid #ff000024;
+                background-position: center center;
+                background-size: cover;
+            }
 
             .histaff-upload-image:hover{
                 cursor: pointer;
@@ -199,6 +212,7 @@ h1{
             font-weight: 400;
             font-size: 15px;
         }
+           
         .histaff-item-group .hs-button{
             width: 40%;
             float: left;
